# simd_vector

./: CMakeLists.txt  LICENSE  readme.md
bench/: bench.cpp
vector/: CMakeLists.txt  vector.hpp
